[bumpversion]
current_version = 0.5.0
commit = True
tag = True
tag_name = {new_version}
tag_message = v{new_version}

[aliases]
test = pytest

[bumpversion:file:README.rst]

[bumpversion:file:setup.py]

[bumpversion:file:nbstripout/_nbstripout.py]

[flake8]
ignore = E501

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
