[bumpversion]
current_version = 0.6.2
commit = True
tag = True
tag_name = {new_version}
tag_message = v{new_version}

[bumpversion:file:README.rst]
search = rev: {current_version}
replace = rev: {new_version}

[bumpversion:file:setup.py]

[bumpversion:file:nbstripout/_nbstripout.py]

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE.txt
