[bumpversion]
current_version = 0.7.1
commit = True
tag = True
tag_name = {new_version}
tag_message = v{new_version}

[bumpversion:file:CONTRIBUTING.md]

[bumpversion:file:README.md]

[bumpversion:file:setup.py]

[bumpversion:file:nbstripout/_nbstripout.py]

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE.txt
